# vPlayer

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PLUGIN-SYSTEM.md  README.md  TODOS.md  插件功能需求文档.md
.claude/: settings.local.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: architecture.md  code-review-workflow.md  data-analysis-workflow.md  implementation-alignment-checklist.md  milestones.md  notes-view-design-review-20260512.md  notes-view-plan.md  office-hours-design-20260422-164538.md  troubleshooting-workflow.md  week1-pr-plan.md
docs/superpowers/plans/: 2026-06-16-tutorial-exporter.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: player.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  dialog.json
src-tauri/src/: config.rs  main.rs
src-tauri/src/error/: fallback.rs  mod.rs  user_notify.rs
src-tauri/src/ipc/: bookmark.rs  chapter.rs  commands.rs  config.rs  events.rs  mediainfo.rs  mod.rs  state.rs  subtitle.rs  tutorial_export.rs  tutorial_export_test.rs
src-tauri/src/mpv/: core.rs  event.rs  mod.rs  options.rs  renderer.rs
src-tauri/src/plugin/: bus.rs  loader.rs  mod.rs  registry.rs  sandbox.rs
src-tauri/src/plugin/builtin/: bookmark.rs  chapter.rs  equalizer.rs  media_info.rs  mod.rs  screenshot.rs  speed.rs  subtitle_download.rs
src-tauri/src/render/: frame.rs  gl_context.rs  mod.rs  texture.rs
src-tauri/src/utils/: logging.rs  paths.rs
(+23 files in other folders)
