[package]
name = "vplayer"
version = "0.1.0"
description = "A modern desktop video player built with Tauri and libmpv"
authors = ["vPlayer Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
